k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: langapp-web
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: langapp-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langapp-web
  labels:
    app: langapp-web
spec:
  selector:
    matchLabels:
      app: langapp-web
  template:
    metadata:
      labels:
        app: langapp-web
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - r9
      volumes:
        - name: langapp-uploads-pv
          persistentVolumeClaim:
            claimName: langapp-uploads-pvc
        - name: config
          secret:
            secretName: langapp-config
      containers:
        - name: langapp-web
          image: registry.gitlab.com/mangoproject/langapp/langapp-web
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /app/backend/web/uploads
              name: langapp-uploads-pv
            - name: "config"
              mountPath: "/app/backend/web/index-local.php"
              subPath: "index-local.php"
            - name: "config"
              mountPath: "/app/backend/config/params-local.php"
              subPath: "params-local.php"
            - name: "config"
              mountPath: "/app/backend/config/web-local.php"
              subPath: "web-local.php"
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "8192Mi"
              cpu: "32000m"
      imagePullSecrets:
        - name: gitlab-langapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langapp-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: langapp.metal1.jonexit.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: langapp-web
                port:
                  number: 80
    - host: langapp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: langapp-web
                port:
                  number: 80
    - host: www.langapp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: langapp-web
                port:
                  number: 80
  tls:
    - hosts:
        - langapp.metal1.jonexit.ru
      secretName: langapp-tls-cert
    - hosts:
        - langapp.net
        - www.langapp.net
      secretName: langapp-net-tls-cert
